test/corpus/functions.txt
================
Simple function
================

int five () {
    return 5;
}

---

(source_file
    (function_definition
        (primitive_type)
        (identifier)
        (parameter_list)
        (block
            (return_statement (number))
        )
    )
)


=======================================
Function with modifiers and parameters
=======================================

public virtual int mult (int x, int y, out int z) {
    z = x * y;
    return z;
}

---

(source_file
    (function_definition
        (modifier)
        (modifier)
        (primitive_type)
        (identifier)
        (parameter_list
            (declaration_parameter (primitive_type) (identifier))
            (declaration_parameter (primitive_type) (identifier))
            (declaration_parameter (modifier) (primitive_type) (identifier))
        )
        (block
            (assignment (identifier) (binary_expression (identifier) (identifier)))
            (return_statement (identifier))
        )
    )
)


=============================================
Function with string-value pairs as argument
=============================================

var obj = Object (
              x: 10,
              y: "test"
          );

---

(source_file
    (declaration
        (identifier)
        (function_call
            (camel_cased_identifier)
            (parameter_list
                (instanciation_parameter (identifier) (number))
                (instanciation_parameter (identifier) (string_literal))
            )
        )
    )
)
